--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>shh</title>
   <link rel="stylesheet" type="text/css" href="vendor/normalize.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Creepster">
   <link rel="stylesheet" type="text/css" href="css/index.css">
 
   <script src="vendor/three.js"></script>
@@ -20,7 +21,11 @@
   <script src="js/shaders/StaticShader.js"></script>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <div class="big-header">
+      hacked by contra
+    </div>
+  </div>
   <script src="js/index.js"></script>
 </body>
 
