--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Creepster">
   <link rel="stylesheet" type="text/css" href="css/index.css">
 
+  <script src="vendor/inline.js"></script>
   <script src="vendor/three.js"></script>
   <script src="js/postprocessing/EffectComposer.js"></script>
   <script src="js/postprocessing/EffectComposer.js"></script>
